@@ -1,3 +1,12 @@
+2008-02-01  Thijs Vermeir  <thijsvermeir@gmail.com>
+
+	* docs/plugins/Makefile.am:
+	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
+	* docs/plugins/gst-plugins-good-plugins-sections.txt:
+	* gst/avi/gstavisubtitle.c:
+	Add documentation for avisubtitle and change class to
+	Codec/Parser/Subtitle
+
 2008-01-31  Jan Schmidt  <Jan.Schmidt@sun.com>
 
 	* sys/v4l2/v4l2_calls.c: (gst_v4l2_fill_lists):
